syntax = "proto3";

package github.com.DeNisBuLgAkOv.msa_big_tech.users.v1;
import "buf/validate/validate.proto";

option go_package = "msa_big_tech/pkg/api/proto/v1;users";


message UserProfile{
  string user_id = 1;
  string nickname = 2;
  optional string bio = 3;
  optional string avatar_url = 4;
}


//Создать профиль
message CreateProfileRequest {
  string user_id = 1;
  string nickname = 2 [
    json_name = "nickname",
    (buf.validate.field).string = {
      pattern: "^[a-z0-9_]{3,20}$",
      min_len: 3,
      max_len: 20
    }
  ];
  optional string bio = 3;
  optional string avatar_url = 4;
}

message CreateProfileResponse {
  UserProfile user_profile = 1;
}


//Обновить профиль
message UpdateProfileRequest {
  uint64 user_id = 1;
  string nickname = 2;
  optional string bio = 3;
  optional string avatar_url = 4;
}

message UpdateProfileResponse {
  UserProfile user_profile = 1;
}


//Получить профиль по ID	
message GetProfileByIDRequest {
  string id = 1;
}

message GetProfileByIDResponse {
  UserProfile user_profile = 1;
}


// Получение профиля по nickname
message GetProfileByNicknameRequest {
  string nickname = 1;
}

message GetProfileByNicknameResponse {
  UserProfile user_profile = 1;
}


// Поиск профилей по query
message SearchByNicknameRequest {
  string query = 1;
  string limit = 2;
}

message SearchByNicknameResponse {
  repeated UserProfile profiles = 1;
}